--- a/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
@@ -70,25 +70,25 @@
 			<div id="">
 				<ul class="mui-table-view">
 					<li class="mui-table-view-cell mui-media ">
-						<img class="mui-media-object mui-pull-left" style="width: 30px ;height: 30px;" src="../../image/utils/default_personalimage.png" />
+						<img class="mui-media-object mui-pull-left" style="width: 20px ;height: 20px;" src="../../image/qiuzhi/answer.png" />
 						<div class="mui-media-body">他的回答</div>
 						<p style="font-size: 13px;margin-top: -20px;" class="mui-pull-right">30<span class="mui-icon mui-icon-forward"></span></p>
 
 					</li>
 					<li class="mui-table-view-cell mui-media ">
-						<img class="mui-media-object mui-pull-left" style="width: 30px ;height: 30px;" src="../../image/utils/default_personalimage.png" />
+						<img class="mui-media-object mui-pull-left" style="width: 20px ;height: 20px;" src="../../image/qiuzhi/question.png" />
 						<div class="mui-media-body">他的提问
 							<div>
 								<p style="font-size: 13px;margin-top: -20px;" class="mui-pull-right">30<span class="mui-icon mui-icon-forward"></span></p>
 					</li>
 					<li class="mui-table-view-cell mui-media ">
-						<img class="mui-media-object mui-pull-left" style="width: 30px ;height: 30px;" src="../../image/utils/default_personalimage.png" />
+						<img class="mui-media-object mui-pull-left" style="width: 20px ;height: 20px;" src="../../image/qiuzhi/comment.png" />
 						<div class="mui-media-body">他的评论
 							<div>
 								<p style="font-size: 13px;margin-top: -20px;" class="mui-pull-right">30<span class="mui-icon mui-icon-forward"></span></p>
 					</li>
 					<li class="mui-table-view-cell mui-media ">
-						<img class="mui-media-object mui-pull-left" style="width: 30px ;height: 30px;" src="../../image/utils/default_personalimage.png" />
+						<img class="mui-media-object mui-pull-left" style="width: 20px ;height: 20px;" src="../../image/qiuzhi/yaoqing.png" />
 						<div class="mui-media-body">邀请他回答
 							<div>
 								<p style="font-size: 13px;margin-top: -20px;" class="mui-pull-right">30<span class="mui-icon mui-icon-forward"></span></p>
