--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
@@ -99,7 +99,7 @@
 				pageSize: '0' //每页记录数,传入0，获取总记录数
 			};
 			// 等待的对话框a
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//1.获取所有话题
 			postDataQZPro_getAllChannels(comData, wd, function(data) {
 				wd.close();
@@ -122,7 +122,7 @@
 				pageSize: '0' //每页记录数,传入0，获取总记录数
 			};
 			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//2.获取符合条件的专家信息
 			postDataQZPro_getExpertsByCondition(comData, wd, function(data) {
 				wd.close();
@@ -142,7 +142,7 @@
 				userId: userId//用户ID
 			};
 			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//3.获取某个用户的信息
 			postDataQZPro_getUserInfo(comData, wd, function(data) {
 				wd.close();
@@ -165,7 +165,7 @@
 				encAddr:''//附件地址,300,多个的情况例如：1.jpg|2.jpg
 			};
 			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//7.修改某个用户的某个问题
 			postDataQZPro_setAskById(comData, wd, function(data) {
 				wd.close();
@@ -187,7 +187,7 @@
 				encAddr:''//附件地址,300,多个的情况例如：1.jpg|2.jpg
 			};
 			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//10.修改某个用户的某条回答
 			postDataQZPro_setAnswerById(comData, wd, function(data) {
 				wd.close();
@@ -207,7 +207,7 @@
 				answerId:answerId//回答ID
 			};
 			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//11.删除某个用户的某条回答
 			postDataQZPro_delAnswerById(comData, wd, function(data) {
 				wd.close();
@@ -229,7 +229,7 @@
 				askId:askId//问题ID
 			};
 			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//13.获取是否已对某个问题关注
 			postDataQZPro_getAskFocusByUser(comData, wd, function(data) {
 				wd.close();
@@ -252,7 +252,7 @@
 				status:'1'//关注状态,0 不关注,1 关注
 			};
 			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//14.设置某个问题的关注
 			postDataQZPro_setAskFocus(comData, wd, function(data) {
 				wd.close();
@@ -274,7 +274,7 @@
 				pageSize:'0'//每页记录数,传入0，获取总记录数
 			};
 			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//15.获取某个问题的关注列表
 			postDataQZPro_getFocusUsersByAsk(comData, wd, function(data) {
 				wd.close();
@@ -294,7 +294,7 @@
 				commentId:commentId//评论ID
 			};
 			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//16.获取某条评论
 			postDataQZPro_getCommentById(comData, wd, function(data) {
 				wd.close();
@@ -314,7 +314,7 @@
 				commentId:commentId//评论ID
 			};
 			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//18.删除某条回答的评论
 			postDataQZPro_delCommentById(comData, wd, function(data) {
 				wd.close();
@@ -336,7 +336,7 @@
 				answerId:answerId//回答ID
 			};
 			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//19.获取是否已对某条回答点赞
 			postDataQZPro_getAnswerLikeByUser(comData, wd, function(data) {
 				wd.close();
@@ -359,7 +359,7 @@
 				status:'1'//点赞状态,0 取消点赞,1 点赞
 			};
 			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//20.设置某条回答的点赞
 			postDataQZPro_setAnswerLike(comData, wd, function(data) {
 				wd.close();
@@ -381,7 +381,7 @@
 				userNote:'修改用户简介'//用户简介,500
 			};
 			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//21.修改某个用户的个人简介
 			postDataQZPro_setUserNoteById(comData, wd, function(data) {
 				wd.close();
@@ -403,7 +403,7 @@
 				focusUserId:userId//关注用户ID
 			};
 			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//22.获取是否已对某个用户关注
 			postDataQZPro_getUserFocusByUser(comData, wd, function(data) {
 				wd.close();
@@ -426,7 +426,7 @@
 				status:'1'//关注状态,0 不关注,1 关注
 			};
 			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//23.设置对某个用户的关注
 			postDataQZPro_setUserFocus(comData, wd, function(data) {
 				wd.close();
@@ -448,7 +448,7 @@
 				pageSize:'0'//每页记录数,传入0，获取总记录数
 			};
 			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//24.获取某个用户的回答列表
 			postDataQZPro_getAnswersByUser(comData, wd, function(data) {
 				wd.close();
@@ -470,7 +470,7 @@
 				pageSize:0//每页记录数,传入0，获取总记录数
 			};
 			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//25.获取某个用户的提问列表
 			postDataQZPro_getAsksByUser(comData, wd, function(data) {
 				wd.close();
@@ -492,7 +492,7 @@
 				pageSize:0//每页记录数,传入0，获取总记录数
 			};
 			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//26.获取某个用户的关注问题列表
 			postDataQZPro_getFocusAsksByUser(comData, wd, function(data) {
 				wd.close();
@@ -514,7 +514,7 @@
 				pageSize:0//每页记录数,传入0，获取总记录数
 			};
 			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//27.获取某个用户的关注人列表
 			postDataQZPro_getFocusUsersByUser(comData, wd, function(data) {
 				wd.close();
@@ -536,7 +536,7 @@
 				pageSize:0//每页记录数,传入0，获取总记录数
 			};
 			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//28.获取某个用户的被人关注列表
 			postDataQZPro_getIsFocusedByUser(comData, wd, function(data) {
 				wd.close();
@@ -559,7 +559,7 @@
 				answerId:answerId//回答ID
 			};
 			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//29.获取是否已对某条评论点赞
 			postDataQZPro_getCommentLikeByUser(comData, wd, function(data) {
 				wd.close();
@@ -583,7 +583,7 @@
 				status:'1'//点赞状态，0 取消点赞，1 点赞
 			};
 			// 等待的对话框
-			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			var wd = events.showWaiting();
 			//30.设置某条评论的点赞
 			postDataQZPro_setCommentLike(comData, wd, function(data) {
 				wd.close();
