提问界面，添加人员信息接口

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
@@ -210,7 +210,53 @@
 					wd.close();
 					console.log('2.获取符合条件的专家信息:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 					if(data.RspCode == 0) {
-						//刷新界面显示
+						//添加人员信息
+						//回调中的临时数据
+						var tempRspData = data.RspData.Data;
+						//获取当前回调的个人信息，主要是头像、昵称
+						var tempArray = [];
+						//先遍历回调数组，获取
+						for(var item in tempRspData) {
+							//当前循环的model
+							var tempModel0 = tempRspData[item];
+							//将当前model中id塞到数组
+							tempArray.push(tempModel0.UserId);
+						}
+						//给数组去重
+						tempArray = arrayDupRemoval(tempArray);
+						//发送获取用户资料申请
+						var tempData = {
+							vvl: tempArray.join(), //用户id，查询的值,p传个人ID,g传ID串
+							vtp: 'g' //查询类型,p(个人)g(id串)
+						}
+						console.log('tempData:' + JSON.stringify(tempData));
+						//21.通过用户ID获取用户资料
+						postDataPro_PostUinf(tempData, wd, function(data1) {
+							wd.close();
+							console.log('21.获取个人资料success:RspCode:' + data1.RspCode + ',RspData:' + JSON.stringify(data1.RspData) + ',RspTxt:' + data1.RspTxt);
+							if(data1.RspCode == 0) {
+								//循环当前的个人信息返回值数组
+								for(var i in data1.RspData) {
+									//当前model
+									var tempModel = data1.RspData[i];
+									//更新头像
+									tempModel.uimg = updateHeadImg(tempModel.uimg, 2);
+									//循环回调数组
+									for(var item in tempRspData) {
+										//当前循环的model
+										var tempModel0 = tempRspData[item];
+										//对比id是否一致
+										if(tempModel0.UserId == tempModel.utid) {
+											//合并
+											tempModel0 = $.extend(tempModel0, tempModel);
+										}
+									}
+								}
+							}
+							console.log('循环遍历后的值：' + JSON.stringify(tempRspData));
+							//刷新界面
+
+						});
 					} else {
 						mui.toast(data.RspTxt);
 					}
