--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -7,6 +7,26 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link rel="stylesheet" type="text/css" href="../../css/mui.min.css" />
 		<link rel="stylesheet" href="../../css/utils/common.css" />
+		<style>
+			.mui-input-group:before{
+				background-color: #fff;
+			}
+			.mui-input-group:after{
+				background-color: #fff;
+			}
+			.row1:after{
+				background-color: #E4E4E4;
+			}
+			.row2:after{
+				background-color: #E4E4E4;
+			}
+			.row3:after{
+				background-color: #E4E4E4;
+			}
+			.mui-btn {
+				padding: 10px;
+			}
+		</style>
 	</head>
 
 	<body>
@@ -18,15 +38,15 @@
 		<div class="mui-content">
 			<br/>
 			<form class="mui-input-group">
-				<div id="old-password" class="mui-input-row" style="display: none;">
+				<div id="old-password" class="mui-input-row row3" style="display: none;">
 					<label style="font-size: 15px;">原密码</label>
 					<input type="password" id="phoneNumber" placeholder="请输入原密码">
 				</div>
-				<div class="mui-input-row">
+				<div class="mui-input-row row1">
 					<label style="font-size: 15px;">新密码</label>
 					<input type="password" oninput="if(value.length>20)value=value.slice(0,20)" id="password0" placeholder="输入新密码">
 				</div>
-				<div class="mui-input-row">
+				<div class="mui-input-row row2">
 					<label style="font-size: 15px;">确认密码</label>
 					<input type="password" oninput="if(value.length>20)value=value.slice(0,20)" id="password1" placeholder="重新输入新密码">
 				</div>
