--- a/JiaoBaoYun-hb/html/register/register_phoneNumber.html
+++ b/JiaoBaoYun-hb/html/register/register_phoneNumber.html
@@ -7,6 +7,11 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link rel="stylesheet" type="text/css" href="../../css/mui.min.css" />
 		<link rel="stylesheet" href="../../css/utils/common.css" />
+		<style>
+			.mui-btn {
+				padding: 10px;
+			}
+		</style>
 	</head>
 
 	<body>
@@ -25,7 +30,7 @@
 				</div>
 			</form>
 			<div class="mui-content-padded">
-				<button id='register' class="mui-btn mui-btn-block mui-btn-primary" style="background: #13b7f6; border: none;">注册</button>
+				<button id='register' class="mui-btn mui-btn-block mui-btn-primary" style="background: #13b7f6; border: none ; ">注册</button>
 			</div>
 		</div>
 		<script src="../../js/mui.min.js" type="text/javascript" charset="utf-8"></script>
