专家风采 除去更多部分

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
@@ -13,33 +13,39 @@
 
 	<body>
 		<div class="mui-content">
-			<!--<div>
+			<div class="experts-content">
 				<div class="experts-show">
 					<p><span class="mui-icon iconfont icon-zhuanjia expert-icon"></span>专家风采</p>
 				</div>
 				<div class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
 				    <div class="mui-scroll">
-				        <a class="mui-control-item mui-active">
-				    专家
+				         <a class="mui-control-item mui-active">
+				        	<img src="../../image/cloud/cloud_0_tuku.png" />
+				        	<p>专家</p>
+				        </a>
+				       <a class="mui-control-item">
+				        	<img src="../../image/cloud/cloud_0_tuku.png" />
+				        	<p>专家</p>
 				        </a>
 				        <a class="mui-control-item">
-				           专家
+				        	<img src="../../image/cloud/cloud_0_tuku.png" />
+				        	<p>专家</p>
 				        </a>
 				        <a class="mui-control-item">
-				            专家
+				        	<img src="../../image/cloud/cloud_0_tuku.png" />
+				        	<p>专家</p>
 				        </a>
 				        <a class="mui-control-item">
-				            专家
+				        	<img src="../../image/cloud/cloud_0_tuku.png" />
+				        	<p>专家</p>
 				        </a>
-				        <a class="mui-control-item">
-				            专家
-				        </a>
-				        <a class="mui-control-item">
-				            专家
+				      <a class="mui-control-item">
+				        	<img src="../../image/cloud/cloud_0_tuku.png" />
+				        	<p>专家</p>
 				        </a>
 				    </div>
 				</div>
-			</div>-->
+			</div>
 			<div class="mui-scroll">
 				<ul id="list-container" class="mui-table-view">
 				</ul>
