--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -127,7 +127,7 @@
 						var tokenInfo = datas.Data;
 						//压缩照片
 						compress.compressPIC(paths, function(event) {
-							CloudFileUtil.uploadFile(tokenInfo.Key, event.target, tokenInfo.Token, function(uploadData, status) {
+							CloudFileUtil.uploadFile(tokenInfo, event.target, function(uploadData, status) {
 								console.log(JSON.stringify(uploadData));
 								img = {
 									url: tokenInfo.Domain + tokenInfo.Key,
@@ -335,7 +335,7 @@
 						var tokenInfo = datas.Data;
 						//压缩照片
 						compress.compressPIC(picPath, function(event) {
-							CloudFileUtil.uploadFile(tokenInfo.Key, event.target, tokenInfo.Token, function(uploadData, status) {
+							CloudFileUtil.uploadFile(tokenInfo, event.target, function(uploadData, status) {
 								console.log(JSON.stringify(uploadData));
 								img = {
 									url: tokenInfo.Domain + tokenInfo.Key,
