--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
@@ -15,35 +15,15 @@
 		<div class="mui-content">
 			<div class="experts-content">
 				<div class="experts-show">
-					<p><span class="mui-icon iconfont icon-zhuanjia expert-icon"></span>专家风采</p>
+					<p><span class="mui-icon iconfont icon-zhuanjia expert-icon"></span>&nbsp;&nbsp;专家风采</p>
 				</div>
-				<div class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
-				    <div class="mui-scroll">
-				         <a class="mui-control-item mui-active">
-				        	<img src="../../image/cloud/cloud_0_tuku.png" />
-				        	<p>专家</p>
-				        </a>
-				       <a class="mui-control-item">
-				        	<img src="../../image/cloud/cloud_0_tuku.png" />
-				        	<p>专家</p>
-				        </a>
-				        <a class="mui-control-item">
-				        	<img src="../../image/cloud/cloud_0_tuku.png" />
-				        	<p>专家</p>
-				        </a>
-				        <a class="mui-control-item">
-				        	<img src="../../image/cloud/cloud_0_tuku.png" />
-				        	<p>专家</p>
-				        </a>
-				        <a class="mui-control-item">
-				        	<img src="../../image/cloud/cloud_0_tuku.png" />
-				        	<p>专家</p>
-				        </a>
-				      <a class="mui-control-item">
-				        	<img src="../../image/cloud/cloud_0_tuku.png" />
-				        	<p>专家</p>
-				        </a>
-				    </div>
+				<div id="experts_sw" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
+					<div id="experts_sc" class="mui-scroll">
+						<!--<a id="allExpert" class="mui-control-item" style="width: 8rem;padding: 1rem 0px;">
+							<span class="mui-icon iconfont icon-gengduo" style="color: #12B7F5;font-size: 28px;margin: 0px;"></span>
+							<p style="color: #12B7F5;">查看全部</p>
+						</a>-->
+					</div>
 				</div>
 			</div>
 			<div class="mui-scroll">
@@ -56,8 +36,9 @@
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/h5fresh.js"></script>
 		<script src="../../js/utils/events.js"></script>
-		<script src="../../js/publicProtocol.js" ></script>
+		<script src="../../js/publicProtocol.js"></script>
 		<script src="../../js/publicQiuzhiProtocol.js"></script>
 		<script src="../../js/qiuzhi/qiuzhi-sub.js"></script>
 	</body>
+
 </html>
